--- a/styles/_form.scss
+++ b/styles/_form.scss
@@ -1,26 +1,26 @@
 .form {
   @include width-heigth($w: 100%, $h: 518px);
-  background: $turquoise-dark url(/images/background/form-bg-1440.svg)
+  background: $turquoise-dark url(../images/background/form-bg-1440.svg)
     calc(50% - 22px) -41px no-repeat;
   background-size: 988px;
-  @include mask($url: url(/images/masks/form-bkg1.svg));
+  @include mask($url: $form-mask-laptop);
   margin-bottom: 125px;
   overflow: hidden;
   @media (width < $width-tablet) {
-    background: $turquoise-dark url(/images/background/form-bg-768.svg)
+    background: $turquoise-dark url(../images/background/form-bg-768.svg)
       calc(50% - -2px) 2px no-repeat;
     background-size: 704px;
-    mask-image: url(/images/masks/form-bkg1-2.svg);
+    mask-image: $form-mask-tablet;
     height: auto;
     margin-bottom: 96px;
   }
   @media (width < $width-smartpthone) {
-    background: $turquoise-dark url(/images/background/form-bg-320.svg) 50% -18%
+    background: $turquoise-dark url(../images/background/form-bg-320.svg) 50% -18%
       no-repeat;
     background-size: 304px;
-    height: 1132px;
-    @include mask($url: url(/images/masks/form-bkg3.svg), $pos: center -30px);
-    margin-bottom: 57px;
+    height: 1106px;
+    @include mask($url: $form-mask-smartphone, $pos: center -27px);
+    margin-bottom: 86px;
   }
   &__container {
     display: flex;
@@ -43,23 +43,23 @@
     }
     @media (width < $width-smartpthone) {
       width: 304px;
-      padding: 64px 24px 80px;
+      padding: 68px 24px 80px;
     }
   }
   &__letter {
     flex-basis: 37%;
     @include width-heigth($w: 418px, $h: 518px);
-    background: url(/images/background/form-bg-letter-1440.svg) no-repeat;
-    mask-image: url(/images/masks/form-bkg1.svg);
+    background: url(../images/background/form-bg-letter-1440.svg) no-repeat;
+    mask-image: $form-mask-laptop;
     position: relative;
     @media (width < $width-tablet) {
       @include width-heigth($w: 400px, $h: 498px);
-      background-image: url(/images/background/form-bg-letter-768.svg);
-      mask-image: url(/images/masks/form-bkg2.svg);
+      background-image: url(../images/background/form-bg-letter-768.svg);
+      mask-image: $form-letter-mask;
       flex-basis: 41%;
     }
     @media (width < $width-smartpthone) {
-      background-image: url(/images/background/form-bg-letter-320.svg);
+      background-image: url(../images/background/form-bg-letter-320.svg);
       mask-image: none;
       flex-basis: 100%;
     }
@@ -76,7 +76,7 @@
   }
   &__letter::after {
     content: "";
-    background: url(/images/icons/letter-after.svg) 50% 50% no-repeat;
+    background: url(../images/icons/letter-after.svg) 50% 50% no-repeat;
     border-radius: 100%;
     @include position($t: 35%, $r: 53px);
     @include width-heigth($w: 69px, $h: 70px);
@@ -200,7 +200,7 @@
     }
   }
   &__agree:checked + label::before {
-    background: $white url(/images/icons/v.svg) center center no-repeat;
+    background: $white url(../images/icons/v.svg) center center no-repeat;
   }
 
   &__agree:hover + label::before {
@@ -260,11 +260,11 @@
   }
   &__email_invalid-img {
     @include ValidationImg;
-    background: $tangerine url(/images/icons/form-invalid.svg);
+    background: $tangerine url(../images/icons/form-invalid.svg);
   }
   &__email_valid-img {
     @include ValidationImg;
-    background: $grass url(/images/icons/form-valid.svg);
+    background: $grass url(../images/icons/form-valid.svg);
   }
 
   &__email:focus {
