feat: fix: Добавлен компонент лого, добавлена бегущая строка,  изменены футер, хедер, стили

--- a/task3/src/assets/styles/_vars-fonts-mixins.scss
+++ b/task3/src/assets/styles/_vars-fonts-mixins.scss
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: normal;
   src: local("ArchivoBlack-Regular"),
-    url("/fonts/ArchivoBlack-Regular.ttf") format("truetype");
+    url("../fonts/ArchivoBlack-Regular.ttf") format("truetype");
 }
 
 @font-face {
