--- a/task3/src/components/footer/footer.css
+++ b/task3/src/components/footer/footer.css
@@ -5,19 +5,19 @@
   src: local("ArchivoBlack-Regular"), url("../fonts/ArchivoBlack-Regular.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Nunito Regular";
+  font-family: "Nunito-Regular";
   font-style: normal;
   font-weight: normal;
-  src: local("Nunito-Regular"), url("../fonts/Nunito-Regular.ttf") format("truetype");
+  src: local("Nunito-Regular"), url("../fonts/Nunito-VariableFont_wght.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Nunito Medium";
+  font-family: "Nunito-Medium";
   font-style: normal;
   font-weight: medium;
   src: local("Nunito-Medium"), url("../fonts/Nunito-Medium.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Nunito Bold";
+  font-family: "Nunito-Bold";
   font-style: normal;
   font-weight: bold;
   src: local("Nunito-Bold"), url("../fonts/Nunito-Bold.ttf") format("truetype");
