--- a/task3/src/components/simpleComp/dataBox/databox.scss
+++ b/task3/src/components/simpleComp/dataBox/databox.scss
@@ -84,8 +84,11 @@
   &__date-box_big {
     justify-content: flex-end;
     padding-top: 0;
-    margin-top: -9px;
+    margin-top: -5px;
     row-gap: 8px;
+    @media (width < vars-mixins.$width-tablet) {
+      margin-top: -9px;
+    }
     @media (width < vars-mixins.$width-smartpthone) {
       position: absolute;
       justify-content: flex-start;
@@ -214,7 +217,7 @@
       padding-right: 388px;
     }
     @media (width < vars-mixins.$width-smartpthone) {
-      padding-right: 15px;
+      padding-right: 25px;
       width: 151px;
     }
   }
